# SROS_v1_Alpha

./: README.md  pyproject.toml  run_all_tests.py
docs/: API_REFERENCE.md  CLI_GUIDE.md  DEMO.md  E2E_TEST_REPORT.md  SROS_STUDY_GUIDE_v1.md
examples/: complex_feature_workflow.srxml  hello_world_workflow.srxml  sample_policy_allow_all.json
sros/: __init__.py
sros/adapters/: __init__.py  base.py  registry.py
sros/cli/: main.py
sros/codex/: codex_index.py
sros/evolution/: __init__.py  analyzer.py  observer.py  ouroboros.py  proposer.py  safeguards.py
sros/governance/: __init__.py  access_control.py  audit_log.py  cost_tracker.py  policy_enforcer.py  policy_engine.py  sovereign_audit_log.py  sovereign_directive.py
sros/kernel/: __init__.py  daemon_registry.py  event_bus.py  kernel_bootstrap.py  kernel_config.py  kernel_state.py
sros/memory/: __init__.py  codex_memory.py  long_term_memory.py  memory_router.py  short_term_memory.py  vector_store.py
sros/mirroros/: __init__.py  drift_detector.py  lenses.py  telemetry_collector.py  trace_store.py  witness.py
sros/nexus/: __init__.py  nexus_core.py
sros/runtime/: __init__.py  context_builder.py  session_manager.py  workflow_engine.py
sros/srxml/: parser.py  validator.py
tests/: local_test_harness.py  sros_test_suite.py  test_adapter_registry.py  test_kernel_boot.py  test_model_adapters.py  test_nexus_core.py  test_ouroboros.py  test_sovereign_directive.py  test_srxml_parser.py  test_srxml_validator.py
tests/fixtures/: codex_seed.json  memory_seed.json  sample_agent_prompt.srxml  sample_workflow.srxml
(+72 files in other folders)
